; ModuleID = '/home/carl/AnghaBench/lede/target/linux/ar71xx/files/drivers/mtd/nand/extr_ar934x_nfc.c_ar934x_nfc_write_page_raw.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/ar71xx/files/drivers/mtd/nand/extr_ar934x_nfc.c_ar934x_nfc_write_page_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtd_info = type { i32, i32 }
%struct.nand_chip = type { i32* }
%struct.ar934x_nfc = type { i32* }

@.str = private unnamed_addr constant [32 x i8] c"write_page_raw: page:%d oob:%d\0A\00", align 1
@NAND_CMD_PAGEPROG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mtd_info*, %struct.nand_chip*, i32*, i32, i32)* @ar934x_nfc_write_page_raw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ar934x_nfc_write_page_raw(%struct.mtd_info* %0, %struct.nand_chip* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.mtd_info*, align 8
  %7 = alloca %struct.nand_chip*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.ar934x_nfc*, align 8
  %12 = alloca i32, align 4
  store %struct.mtd_info* %0, %struct.mtd_info** %6, align 8
  store %struct.nand_chip* %1, %struct.nand_chip** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %14 = call %struct.ar934x_nfc* @mtd_to_ar934x_nfc(%struct.mtd_info* %13)
  store %struct.ar934x_nfc* %14, %struct.ar934x_nfc** %11, align 8
  %15 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %11, align 8
  %16 = load i32, i32* %10, align 4
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @nfc_dbg(%struct.ar934x_nfc* %15, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %16, i32 %17)
  %19 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %11, align 8
  %20 = getelementptr inbounds %struct.ar934x_nfc, %struct.ar934x_nfc* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %24 = getelementptr inbounds %struct.mtd_info, %struct.mtd_info* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @memcpy(i32* %21, i32* %22, i32 %25)
  %27 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %28 = getelementptr inbounds %struct.mtd_info, %struct.mtd_info* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  store i32 %29, i32* %12, align 4
  %30 = load i32, i32* %9, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %53

32:                                               ; preds = %5
  %33 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %11, align 8
  %34 = getelementptr inbounds %struct.ar934x_nfc, %struct.ar934x_nfc* %33, i32 0, i32 0
  %35 = load i32*, i32** %34, align 8
  %36 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %37 = getelementptr inbounds %struct.mtd_info, %struct.mtd_info* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %35, i64 %39
  %41 = load %struct.nand_chip*, %struct.nand_chip** %7, align 8
  %42 = getelementptr inbounds %struct.nand_chip, %struct.nand_chip* %41, i32 0, i32 0
  %43 = load i32*, i32** %42, align 8
  %44 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %45 = getelementptr inbounds %struct.mtd_info, %struct.mtd_info* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 4
  %47 = call i32 @memcpy(i32* %40, i32* %43, i32 %46)
  %48 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %49 = getelementptr inbounds %struct.mtd_info, %struct.mtd_info* %48, i32 0, i32 1
  %50 = load i32, i32* %49, align 4
  %51 = load i32, i32* %12, align 4
  %52 = add nsw i32 %51, %50
  store i32 %52, i32* %12, align 4
  br label %53

53:                                               ; preds = %32, %5
  %54 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %11, align 8
  %55 = load i32, i32* @NAND_CMD_PAGEPROG, align 4
  %56 = load i32, i32* %10, align 4
  %57 = load i32, i32* %12, align 4
  %58 = call i32 @ar934x_nfc_send_write(%struct.ar934x_nfc* %54, i32 %55, i32 0, i32 %56, i32 %57)
  ret i32 %58
}

declare dso_local %struct.ar934x_nfc* @mtd_to_ar934x_nfc(%struct.mtd_info*) #1

declare dso_local i32 @nfc_dbg(%struct.ar934x_nfc*, i8*, i32, i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @ar934x_nfc_send_write(%struct.ar934x_nfc*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
